test_cases/tests/uom/type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/uom/type_mismatch.rs:9:22
  |
9 |     let error = l1 + t1;
  |                      ^^ expected struct `PInt`, found struct `Z0`
  |
  = note: expected struct `Quantity<dyn Dimension<Th = Z0, L = PInt<UInt<UTerm, B1>>, M = Z0, N = Z0, T = Z0, J = Z0, Kind = (dyn Kind + 'static), I = Z0>, _, _>`
             found struct `Quantity<dyn Dimension<Th = Z0, L = Z0, M = Z0, N = Z0, T = PInt<UInt<UTerm, B1>>, J = Z0, Kind = (dyn Kind + 'static), I = Z0>, dyn uom::si::Units<f32, electric_current = uom::si::electric_current::ampere, thermodynamic_temperature = uom::si::thermodynamic_temperature::kelvin, time = uom::si::time::second, amount_of_substance = uom::si::amount_of_substance::mole, mass = uom::si::mass::kilogram, luminous_intensity = uom::si::luminous_intensity::candela, length = uom::si::length::meter>, _>`
